# safe-kernels

./: .gitignore  CLAUDE.md  README.md  modal_app.py  run.sh  rust-toolchain.toml
kernels/barrier_bench/: Cargo.toml
kernels/barrier_bench/src/: lib.rs  main.rs
kernels/bench-util/: Cargo.toml
kernels/bench-util/src/: lib.rs
kernels/gemm/: Cargo.toml
kernels/gemm/baselines/: gemm_baseline.cu
kernels/gemm/src/: lib.rs  main.rs
kernels/vecadd/: Cargo.toml
kernels/vecadd/src/: lib.rs  main.rs
kernels/vecsum/: Cargo.toml
kernels/vecsum/baselines/: reduce_baseline.cu
kernels/vecsum/src/: lib.rs  main.rs
