[package]
name = "bench-util"
version = "0.1.0"
edition = "2024"

# Standalone crate: not part of any parent workspace. Path-dependency only
# (used by sibling kernel crates), so it isn't run or built on its own.
[workspace]

[dependencies]
# No tag: must resolve to the SAME revision as the kernel crates' cuda-oxide
# deps (they are also untagged), or two incompatible cuda-core types coexist.
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git" }
