[package]
name = "vecadd"
version = "0.1.0"
edition = "2024"

# Standalone crate: not part of any parent workspace.
[workspace]

# cuda-oxide is not published to crates.io, so we pull the device/host/core
# crates straight from the repo, pinned to the same tag the Modal image builds
# its codegen backend from. Keep this tag in sync with CUDA_OXIDE_REF in
# ../../modal_app.py.
[dependencies]
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", tag = "v0.2.1" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", tag = "v0.2.1" }
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", tag = "v0.2.1" }

[profile.release]
debug = false
lto = true
